fixed image search query for image integrations

--- a/src/content/docs/es/guides/images.mdx
+++ b/src/content/docs/es/guides/images.mdx
@@ -11,7 +11,7 @@ import Since from '~/components/Since.astro';
 
 ### En archivos `.astro`
 
-Astro utiliza elementos HTML `<img>` para mostrar imágenes, y todos los atributos de imagen HTML son compatibles. 
+Astro utiliza elementos HTML `<img>` para mostrar imágenes, y todos los atributos de imagen HTML son compatibles.
 
 Se requiere el atributo `src` y su formato dependerá de dónde se almacenen las imágenes:
 
@@ -51,7 +51,7 @@ Si no puedes almacenar tus imágenes en `public/`, te recomendamos usar el forma
 
 ### En archivos MDX
 
-Puedes usar la sintaxis estándar de Markdown `![]()` o las etiquetas JSX `<img />` en tus archivos `.mdx`. Al igual que los archivos Markdown, los archivos MDX pueden mostrar imágenes desde tu carpeta `public/` o un servidor remoto. 
+Puedes usar la sintaxis estándar de Markdown `![]()` o las etiquetas JSX `<img />` en tus archivos `.mdx`. Al igual que los archivos Markdown, los archivos MDX pueden mostrar imágenes desde tu carpeta `public/` o un servidor remoto.
 
 Además, puedes importar y usar imágenes ubicadas en el directorio `src/` de tu proyecto, como lo harías en los componentes de Astro.
 
@@ -154,7 +154,7 @@ Importa tu imagen en el frontmatter y pásala directamente al atributo `src` al 
 
 Pasa al atributo `src` del componente una ruta relativa a la carpeta public e incluye un valor para `alt`.
 
-Se tratará como una imagen remota, que requiere tanto [`width`](/es/guides/integrations-guide/image/#width) como [`height`](/es/guides/integrations-guide/image/#height), o una dimensión y un atributo [`aspectRatio`](/es/guides/integrations-guide/image/#aspectratio). 
+Se tratará como una imagen remota, que requiere tanto [`width`](/es/guides/integrations-guide/image/#width) como [`height`](/es/guides/integrations-guide/image/#height), o una dimensión y un atributo [`aspectRatio`](/es/guides/integrations-guide/image/#aspectratio).
 
 Se requiere un valor para el atributo `format` (por ejemplo png, avif) para transformar la imagen.
 
@@ -199,7 +199,7 @@ const remoteAlt = 'Una vista de un bosque durante el día';
 
 ### `<Picture /> `
 
-El [componente `<Picture />`](/es/guides/integrations-guide/image/#picture-) de Astro puede ser usado para proporcionar imágenes adaptables en tu proyecto, incluyendo imágenes con diferentes tamaños, formatos y disposiciones. 
+El [componente `<Picture />`](/es/guides/integrations-guide/image/#picture-) de Astro puede ser usado para proporcionar imágenes adaptables en tu proyecto, incluyendo imágenes con diferentes tamaños, formatos y disposiciones.
 
 Puedes permitir que el navegador elija los tamaños de imágenes apropiados, resoluciones y tipos de archivo basados en factores como el tamaño de la pantalla y la conexión. O bien puedes especificar reglas que el navegador debe seguir basadas en media queries.
 
@@ -305,7 +305,7 @@ const {src, ...attrs} = Astro.props;
 </style>
 ```
 
-### Usar la etiqueta `<img>` con la integración de imágenes 
+### Usar la etiqueta `<img>` con la integración de imágenes
 
 La integración oficial de imágenes cambia las importaciones de imágenes para devolver un objeto en lugar de un string de origen.
 El objeto tiene las siguientes propiedades, derivadas desde un archivo importado:
@@ -338,7 +338,7 @@ import rocket from '../images/rocket.svg?url';
 
 ## Usar imágenes de un CMS o una CDN
 
-Las CDNs de imágenes funcionan con Astro. Utiliza la URL completa de una imagen como atributo `src` en una etiqueta `<img>` o notación de Markdown. 
+Las CDNs de imágenes funcionan con Astro. Utiliza la URL completa de una imagen como atributo `src` en una etiqueta `<img>` o notación de Markdown.
 
 Alternativamente, si la CDN proporciona un SDK para Node.js, puedes usarlo en tu proyecto. Por ejemplo, el [SDK de Cloudinary](https://cloudinary.com/documentation/node_integration) puede generar la etiqueta `<img>` con el `src` apropiado para ti.
 
@@ -354,4 +354,4 @@ Si la imagen es meramente decorativa (p. ej. no contribuye al entendimiento de l
 
 ## Integraciones de la comunidad
 
-Además de la integración oficial [`@astrojs/image`](/es/guides/integrations-guide/image/), existen varias [integraciones de imágenes de la comunidad](https://astro.build/integrations/css+ui/?q=image) para optimizar y trabajar con imágenes en tu proyecto.
+Además de la integración oficial [`@astrojs/image`](/es/guides/integrations-guide/image/), existen varias [integraciones de imágenes de la comunidad](https://astro.build/integrations?search=images) para optimizar y trabajar con imágenes en tu proyecto.
