--- a/src/content/docs/fr/guides/images.mdx
+++ b/src/content/docs/fr/guides/images.mdx
@@ -76,7 +76,7 @@ Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-con
 ## Où stocker les images
 
 ### `src/`
-Vos images stockées dans `src/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
+Vos images stockées dans `src/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown.
 
 Nous recommandons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#utilisation-des-images-depuis-un-cms-ou-un-cdn) si vous devez utiliser des fichiers Markdown.
 
@@ -352,4 +352,4 @@ Si l'image est simplement décorative (i.e. elle ne contribue pas à la compréh
 
 ## Intégrations Communautaires
 
-En plus de l'intégration [`@astrojs/image`](/fr/guides/integrations-guide/image/) officielle, il existe plusieurs [intégrations d'images communautaires](https://astro.build/integrations/css+ui/?q=image) pour optimiser et travailler avec des images dans votre projet Astro.
+En plus de l'intégration [`@astrojs/image`](/fr/guides/integrations-guide/image/) officielle, il existe plusieurs [intégrations d'images communautaires](https://astro.build/integrations?search=images) pour optimiser et travailler avec des images dans votre projet Astro.
