--- a/src/content/docs/en/guides/images.mdx
+++ b/src/content/docs/en/guides/images.mdx
@@ -9,14 +9,14 @@ import Since from '~/components/Since.astro';
 Astro provides several ways for you to use images on your site, whether they are stored locally inside your project, linked to remotely, or stored in a CMS or CDN!
 
 :::note[using Assets (Experimental)]
-Experimental asset support was added in `astro@2.1.0`. If you have enabled assets support, see the [Assets (Experimental) Guide](/en/guides/assets/) for extra information. 
+Experimental asset support was added in `astro@2.1.0`. If you have enabled assets support, see the [Assets (Experimental) Guide](/en/guides/assets/) for extra information.
 
 **Some of the advice below is incompatible with the experimental flag.**
 :::
 
 ### In `.astro` files
 
-Astro uses HTML `<img>` elements to display images, and all HTML image attributes are supported. 
+Astro uses HTML `<img>` elements to display images, and all HTML image attributes are supported.
 
 The `src` attribute is required, and its format will depend on where your images are stored, and whether you have enabled experimental support for assets:
 
@@ -56,7 +56,7 @@ If you cannot keep your images in `public/`, we recommend enabling [experimental
 
 ### In MDX files
 
-You can use standard Markdown `![]()` syntax or  JSX `<img />` tags in your `.mdx` files to display images from your `public/` folder or remote servers. 
+You can use standard Markdown `![]()` syntax or  JSX `<img />` tags in your `.mdx` files to display images from your `public/` folder or remote servers.
 
 Additionally, you can import and use images located in your project's `src/` directory, as you would in Astro components.
 
@@ -86,11 +86,11 @@ When adding images in a [UI framework component](/en/core-concepts/framework-com
 
 ### `src/`
 
-Your images stored in `src/` can be used by components (`.astro`, `.mdx` and other UI frameworks) but not in Markdown files. 
+Your images stored in `src/` can be used by components (`.astro`, `.mdx` and other UI frameworks) but not in Markdown files.
 
 We recommend that you keep your images in [`public/`](#public) or store them [remotely](#using-images-from-a-cms-or-cdn) if you must use Markdown files.
 
-Import them from a **relative file path** or [import alias](/en/guides/aliases/) in any component file and then use the import as the image's `src` attribute. 
+Import them from a **relative file path** or [import alias](/en/guides/aliases/) in any component file and then use the import as the image's `src` attribute.
 
 
 ```astro
@@ -121,7 +121,7 @@ The `src` attribute is **relative to the public folder**. In Markdown, you can a
 
 ### `src/assets/` (experimental)
 
-See the [Assets (Experimental)](/en/guides/assets/) guide for enabling experimental use of the `/assets/` folder. 
+See the [Assets (Experimental)](/en/guides/assets/) guide for enabling experimental use of the `/assets/` folder.
 
 This will require you to update your existing images, remove the current Astro image integration, and will also require additional manual changes to take advantage of some of its new features.
 
@@ -167,9 +167,9 @@ Import your image in frontmatter and pass it directly to the `<Image />` compone
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src), [`alt`](/en/guides/integrations-guide/image/#alt), [`format`](/en/guides/integrations-guide/image/#format), and dimensions)
 
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
+Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`.
 
-It will be treated as a remote image, which requires either both [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height), or one dimension and an [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio) attribute. 
+It will be treated as a remote image, which requires either both [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height), or one dimension and an [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio) attribute.
 
 A value for the `format` attribute (e.g. png, avif) to transform your image is required.
 
@@ -215,9 +215,9 @@ const remoteAlt = "A low-angle view of a forest during the daytime";
 
 ### `<Picture /> `
 
-Astro's [`<Picture />` component](/en/guides/integrations-guide/image/#picture-) can be used to provide responsive images on your site, including multiple image sizes, formats, and layouts. 
+Astro's [`<Picture />` component](/en/guides/integrations-guide/image/#picture-) can be used to provide responsive images on your site, including multiple image sizes, formats, and layouts.
 
-You can let the user's browser choose appropriate image sizes, resolutions, and file types based on factors like screen size and bandwidth. Or, you can specify rules that the browser must follow based on media queries. 
+You can let the user's browser choose appropriate image sizes, resolutions, and file types based on factors like screen size and bandwidth. Or, you can specify rules that the browser must follow based on media queries.
 
 This component is useful to optimize what your user sees at various screen sizes, or for art direction.
 
@@ -225,7 +225,7 @@ This component is useful to optimize what your user sees at various screen sizes
 Check out MDN's guide for more information about [responsive images and art direction](https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#art_direction).
 :::
 
-#### Remote Images 
+#### Remote Images
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
 
@@ -251,7 +251,7 @@ By default, the `<Picture />` component's [`formats`](/en/guides/integrations-gu
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
 
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
+Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`.
 
 The image will be treated as a remote image, so a value for `aspectRatio` is also required to ensure the correct height can be calculated at build time.
 
@@ -337,7 +337,7 @@ The object has the following properties, derived from the imported file:
 }
 ```
 
-If you have the image integration installed, refer to the `src` property of the object when using `<img>`. 
+If you have the image integration installed, refer to the `src` property of the object when using `<img>`.
 
 ```astro ".src"
 ---
@@ -357,7 +357,7 @@ import rocket from '../images/rocket.svg?url';
 
 ## Using Images from a CMS or CDN
 
-Image CDNs work with Astro. Use an image's full URL as the `src` attribute in an `<img>` tag or Markdown notation. 
+Image CDNs work with Astro. Use an image's full URL as the `src` attribute in an `<img>` tag or Markdown notation.
 
 Alternatively, if the CDN provides a Node.js SDK, you can use that in your project. For example, [Cloudinary’s SDK](https://cloudinary.com/documentation/node_integration) can generate the `<img>` tag with the appropriate `src` for you.
 
@@ -365,9 +365,9 @@ To use [external images with the `<Image />`](#remote-images) and [`<Picture />`
 
 ## Alt Text
 
-Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images. 
+Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
 
-This attribute is required for the image integration's `<Image />` and `<Picture />` components. These components will throw an error if no alt text is provided. 
+This attribute is required for the image integration's `<Image />` and `<Picture />` components. These components will throw an error if no alt text is provided.
 
 If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
 
@@ -375,4 +375,4 @@ If the image is merely decorative (i.e. doesn’t contribute to the understandin
 
 ## Community Integrations
 
-In addition to the official [`@astrojs/image`](/en/guides/integrations-guide/image/) integration, there are several third-party [community image integrations](https://astro.build/integrations/css+ui/?q=image) for optimizing and working with images in your Astro project.
+In addition to the official [`@astrojs/image`](/en/guides/integrations-guide/image/) integration, there are several third-party [community image integrations](https://astro.build/integrations?search=images) for optimizing and working with images in your Astro project.
