--- a/src/content/docs/en/guides/deploy/google-cloud.mdx
+++ b/src/content/docs/en/guides/deploy/google-cloud.mdx
@@ -119,7 +119,7 @@ Change the following values in the commands above to match your project:
 - `HOSTNAME`: the registry host (`gcr.io`, `eu.grc.io`, `asia.gcr.io`, `us.gcr.io`).
 - `PROJECT`: your Google Cloud project ID.
 - `TARGET-IMAGE`: the name for the image when it's stored in the registry.
-- `TAG` is the version associated with the image
+- `TAG` is the version associated with the image.
 
 
 [Read more in the Google Cloud docs.](https://cloud.google.com/container-registry/docs/pushing-and-pulling)
