--- a/src/content/docs/en/editor-setup.mdx
+++ b/src/content/docs/en/editor-setup.mdx
@@ -55,9 +55,9 @@ See [the project's User Guide](https://ota-meshi.github.io/eslint-plugin-astro/u
 
 ### Prettier
 
-If you're using the [Astro VS Code Extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) or [the Astro LSP within another editor](#other-code-editors), code formatting is included. Otherwise, you can use [Prettier](https://prettier.io/), a popular formatter for JavaScript, HTML, CSS and more. 
+[Prettier](https://prettier.io/) is a popular formatter for JavaScript, HTML, CSS and more. If you're using the [Astro VS Code Extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) or [the Astro language server within another editor](#other-code-editors), code formatting with Prettier is included.
 
-To add support for formatting `.astro` files, use [the official Astro Prettier plugin](https://github.com/withastro/prettier-plugin-astro).
+If you want to use Prettier without Astro’s language server, for example to run [Prettier’s CLI](https://prettier.io/docs/en/cli.html), you can add support for formatting `.astro` files with [the official Astro Prettier plugin](https://github.com/withastro/prettier-plugin-astro).
 
 To get started, first install Prettier and the plugin:
 
