--- a/src/content/docs/en/guides/integrations-guide/lit.mdx
+++ b/src/content/docs/en/guides/integrations-guide/lit.mdx
@@ -13,7 +13,7 @@ description: Learn how to use the @astrojs/lit framework integration to extend c
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/lit/'
 hasREADME: true
 category: renderer
-i18nReady: false
+i18nReady: true
 ---
 
 import Video from '~/components/Video.astro';
