Add `i18nReady: true` to tutorial pages

--- a/src/content/docs/en/tutorial/2-pages/4.mdx
+++ b/src/content/docs/en/tutorial/2-pages/4.mdx
@@ -4,6 +4,7 @@ title: Style your About page
 description: |-
   Tutorial: Build your first Astro blog —
   Add an Astro style tag for scoped styling on the page
+i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
