--- a/src/content/docs/en/tutorial/2-pages/5.mdx
+++ b/src/content/docs/en/tutorial/2-pages/5.mdx
@@ -4,6 +4,7 @@ title: Add site-wide styling
 description: |-
   Tutorial: Build your first Astro blog —
   Create a global stylesheet for site-wide styling
+i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
