--- a/src/content/docs/en/tutorial/1-setup/2.mdx
+++ b/src/content/docs/en/tutorial/1-setup/2.mdx
@@ -4,6 +4,7 @@ title: Create your first Astro project
 description: |-
   Tutorial: Build your first Astro blog —
   Create a new project for the Astro tutorial and get ready to code
+i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
 import Checklist from '~/components/Checklist.astro';
