--- a/src/content/docs/en/tutorial/2-pages/3.mdx
+++ b/src/content/docs/en/tutorial/2-pages/3.mdx
@@ -4,6 +4,7 @@ title: Add dynamic content about you
 description: |-
   Tutorial: Build your first Astro blog —
   Use variables and conditional rendering on your Astro pages
+i18nReady: true
 ---
 import Checklist from '~/components/Checklist.astro';
 import Spoiler from '~/components/Spoiler.astro';
