--- a/src/content/docs/en/tutorial/3-components/4.mdx
+++ b/src/content/docs/en/tutorial/3-components/4.mdx
@@ -6,6 +6,7 @@ description: >-
 
   Add client-side interactivity to your mobile navigation with an Astro script
   tag
+i18nReady: true
 ---
 import Badge from '~/components/Badge.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
