--- a/src/content/docs/en/tutorial/6-islands/2.mdx
+++ b/src/content/docs/en/tutorial/6-islands/2.mdx
@@ -4,6 +4,7 @@ title: 'Back on dry land. Take your blog from day to night, no island required!'
 description: |-
   Tutorial: Build your first Astro blog —
   Build a light/dark theme toggle using only JavaScript and CSS
+i18nReady: true
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
