Add `i18nReady: true` to CMS pages

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -4,6 +4,7 @@ description: Add content to your Astro project using Tina as a CMS
 type: cms
 stub: false
 service: Tina CMS
+i18nReady: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
