--- a/src/content/docs/en/guides/cms/wordpress.mdx
+++ b/src/content/docs/en/guides/cms/wordpress.mdx
@@ -4,6 +4,7 @@ description: Add content to your Astro project using WordPress as a CMS
 type: cms
 stub: false
 service: WordPress
+i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
