--- a/src/content/docs/en/guides/cms/storyblok.mdx
+++ b/src/content/docs/en/guides/cms/storyblok.mdx
@@ -4,6 +4,7 @@ description: Add content to your Astro project using Storyblok as a CMS
 type: cms
 service: Storyblok
 stub: false
+i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
