Add `i18nReady: true` to migration pages

--- a/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -4,6 +4,7 @@ description: Tips for migrating an existing Next.js project to Astro
 type: migration
 stub: false
 framework: Next.js
+i18nReady: true
 ---
 import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
