--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -4,6 +4,7 @@ description: Tips for migrating an existing NuxtJS project to Astro
 type: migration
 stub: false
 framework: NuxtJS
+i18nReady: true
 ---
 import AstroVueTabs from '~/components/tabs/AstroVueTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
