--- a/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -4,6 +4,7 @@ description: Tips for migrating an existing Gatsby project to Astro
 type: migration
 stub: false
 framework: Gatsby
+i18nReady: true
 ---
 import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
