--- a/src/content/docs/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -4,6 +4,7 @@ description: Tips for migrating an existing Jekyll project to Astro
 type: migration
 stub: true
 framework: Jekyll
+i18nReady: true
 ---
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
