--- a/src/content/docs/en/recipes/build-forms.mdx
+++ b/src/content/docs/en/recipes/build-forms.mdx
@@ -112,7 +112,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
         const data = await Astro.request.formData();
         const name = data.get("username");
         const email = data.get("email");
-        const message = data.get("password");
+        const password = data.get("password");
         // Do something with the data
       } catch (error) {
         if (error instanceof Error) {
