get to the user goal quicker
Co-authored-by: WintrCodes <110974960+WintrCodes@users.noreply.github.com>

--- a/src/content/docs/en/editor-setup.mdx
+++ b/src/content/docs/en/editor-setup.mdx
@@ -57,7 +57,7 @@ See [the project's User Guide](https://ota-meshi.github.io/eslint-plugin-astro/u
 
 [Prettier](https://prettier.io/) is a popular formatter for JavaScript, HTML, CSS, and more. If you're using the [Astro VS Code Extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) or [the Astro language server within another editor](#other-code-editors), code formatting with Prettier is included.
 
-If you want to use Prettier without Astro’s language server, for example, to run [Prettier’s CLI](https://prettier.io/docs/en/cli.html), you can add support for formatting `.astro` files with [the official Astro Prettier plugin](https://github.com/withastro/prettier-plugin-astro).
+To add support for formatting `.astro` files outside of the editor (e.g. CLI) or inside editors that don't support our editor tooling, install [the official Astro Prettier plugin](https://github.com/withastro/prettier-plugin-astro).
 
 To get started, first install Prettier and the plugin:
 
