Apply suggestions from Yan
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -242,50 +242,56 @@ For example, given a page that fetches some data:
 
 ```astro title="src/pages/index.astro"
 ---
-const data = await fetch('https://example.com')
-const otherData = await fetch('https//other-example.com')
+const personResponse = await fetch('https://randomuser.me/api/');
+const personData = await personResponse.json();
+const randomPerson = personData.results[0];
+const factResponse = await fetch('https://catfact.ninja/fact');
+const factData = await factResponse.json();
 ---
 <html>
   <head>
-    <title>Astro example</title>
+    <title>A name and a fact</title>
   </head>
   <body>
-    <p>{data.example}</p>
-    <p>{otherData.example}</p>
+    <p>{randomPerson.name.first}</p>
+    <p>{factData.fact}</p>
   </body>
 </html>
 ```
 
 We can move the fetch call into a component to allow the page to send down the shell of the markup (the html, head, and body) before the fetch request is done loading:
 
-```astro title="src/components/Example.astro"
+```astro title="src/components/RandomName.astro"
 ---
-const data = await fetch('https://example.com')
+const personResponse = await fetch('https://randomuser.me/api/');
+const personData = await personResponse.json();
+const randomPerson = personData.results[0];
 ---
-<p>{data.example}<p>
+<p>{randomPerson.name.first}</p>
 ```
 
-```astro title="src/components/OtherExample.astro"
+```astro title="src/components/RandomFact.astro"
 ---
-const otherData = await fetch('https://other-example.com')
+const factResponse = await fetch('https://catfact.ninja/fact');
+const factData = await factResponse.json();
 ---
-<p>{otherData.example}<p>
+<p>{factData.fact}</p>
 ```
 
 And update our page to stream in the component instead:
 
 ```astro title="src/pages/index.astro" {1, 9}
 ---
-import Example from '../components/Example.astro'
-import OtherExample from '../components/OtherExample.astro'
+import RandomName from '../components/RandomName.astro'
+import RandomFact from '../components/RandomFact.astro'
 ---
 <html>
   <head>
-    <title>Astro example</title>
+    <title>A name and a fact</title>
   </head>
   <body>
-    <Example />
-    <OtherExample />
+    <RandomName />
+    <RandomFact />
   </body>
 </html>
 ```
