--- a/src/content/docs/en/reference/errors/unknown-vite-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-vite-error.mdx
@@ -14,9 +14,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 
 ## What went wrong?
-Vite encountered an unknown error while rendering your project. We unfortunately do not know what happened (or we would tell you!)
-
-If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
+Vite encountered an unknown error while rendering your project. We unfortunately do not know what happened (or we would tell you!)If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
 
 **See Also:**
 -  [Vite troubleshooting guide](https://vitejs.dev/guide/troubleshooting.html)
