--- a/src/content/docs/en/reference/errors/csssyntax-error.mdx
+++ b/src/content/docs/en/reference/errors/csssyntax-error.mdx
@@ -13,9 +13,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-CSSSyntaxError: Missed semicolon<br/>
-CSSSyntaxError: Unclosed string<br/> (E05001)
+> **Example error messages:**<br/>CSSSyntaxError: Missed semicolon<br/>CSSSyntaxError: Unclosed string<br/> (E05001)
 
 ## What went wrong?
 Astro encountered an error while parsing your CSS, due to a syntax error. This is often caused by a missing semicolon.
