--- a/src/content/docs/en/reference/errors/get-static-paths-expected-params.mdx
+++ b/src/content/docs/en/reference/errors/get-static-paths-expected-params.mdx
@@ -16,22 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **GetStaticPathsExpectedParams**: Missing or empty required `params` property on `getStaticPaths` route. (E03013)
 
 ## What went wrong?
-Every route specified by `getStaticPaths` require a `params` property specifying the path parameters needed to match the route.
-
-For instance, the following code:
-```astro title="pages/blog/[id].astro"
----
-export async function getStaticPaths() {
-	return [
-		{ params: { id: '1' } }
-	];
-}
----
-```
-Will create the following route: `site.com/blog/1`.
+Every route specified by `getStaticPaths` require a `params` property specifying the path parameters needed to match the route.For instance, the following code:```astro title="pages/blog/[id].astro"---export async function getStaticPaths() {	return [		{ params: { id: '1' } }	];}---```Will create the following route: `site.com/blog/1`.
 
 **See Also:**
--  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)
--  [`params`](/en/reference/api-reference/#params)
+-  [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths)- [`params`](/en/reference/api-reference/#params)
 
 
