--- a/src/content/docs/en/reference/errors/image-missing-alt.mdx
+++ b/src/content/docs/en/reference/errors/image-missing-alt.mdx
@@ -16,13 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **ImageMissingAlt**: The alt property is required. (E03022)
 
 ## What went wrong?
-The `alt` property allows you to provide descriptive alt text to users of screen readers and other assistive technologies. In order to ensure your images are accessible, the `Image` component requires that an `alt` be specified.
-
-If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+The `alt` property allows you to provide descriptive alt text to users of screen readers and other assistive technologies. In order to ensure your images are accessible, the `Image` component requires that an `alt` be specified.If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
 
 **See Also:**
--  [Assets (Experimental)](/en/guides/assets/)
--  [Image component](/en/guides/assets/#image--astroassets)
--  [Image component#alt](/en/guides/assets/#alt-required)
+-  [Assets (Experimental)](/en/guides/assets/)- [Image component](/en/guides/assets/#image--astroassets)- [Image component#alt](/en/guides/assets/#alt-required)
 
 
