--- a/src/content/docs/en/reference/errors/invalid-image-service.mdx
+++ b/src/content/docs/en/reference/errors/invalid-image-service.mdx
@@ -16,9 +16,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **InvalidImageService**: There was an error loading the configured image service. Please see the stack trace for more information. (E03023)
 
 ## What went wrong?
-There was an error while loading the configured image service. This can be caused by various factors, such as your image service not properly exporting a compatible object in its default export, or an incorrect path.
-
-If you believe that your service is properly configured and this error is wrong, please [open an issue](https://astro.build/issues/).
+There was an error while loading the configured image service. This can be caused by various factors, such as your image service not properly exporting a compatible object in its default export, or an incorrect path.If you believe that your service is properly configured and this error is wrong, please [open an issue](https://astro.build/issues/).
 
 **See Also:**
 -  [Image Service API](/en/reference/image-service-reference/)
