--- a/src/content/docs/en/reference/errors/missing-media-query-directive.mdx
+++ b/src/content/docs/en/reference/errors/missing-media-query-directive.mdx
@@ -16,11 +16,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **MissingMediaQueryDirective**: Media query not provided for `client:media` directive. A media query similar to `client:media="(max-width: 600px)"` must be provided (E03006)
 
 ## What went wrong?
-A [media query](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries) parameter is required when using the `client:media` directive.
-
-```astro
-<Counter client:media="(max-width: 640px)" />
-```
+A [media query](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries) parameter is required when using the `client:media` directive.```astro<Counter client:media="(max-width: 640px)" />```
 
 **See Also:**
 -  [`client:media`](/en/reference/directives-reference/#clientmedia)
