--- a/src/content/docs/en/reference/errors/no-client-entrypoint.mdx
+++ b/src/content/docs/en/reference/errors/no-client-entrypoint.mdx
@@ -19,7 +19,6 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 Astro tried to hydrate a component on the client, but the renderer used does not provide a client entrypoint to use to hydrate.
 
 **See Also:**
--  [addRenderer option](/en/reference/integrations-reference/#addrenderer-option)
--  [Hydrating framework components](/en/core-concepts/framework-components/#hydrating-interactive-components)
+-  [addRenderer option](/en/reference/integrations-reference/#addrenderer-option)- [Hydrating framework components](/en/core-concepts/framework-components/#hydrating-interactive-components)
 
 
