--- a/src/content/docs/en/reference/errors/no-matching-renderer.mdx
+++ b/src/content/docs/en/reference/errors/no-matching-renderer.mdx
@@ -16,12 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > Unable to render `COMPONENT_NAME`. There are `RENDERER_COUNT` renderer(s) configured in your `astro.config.mjs` file, but none were able to server-side render `COMPONENT_NAME`. (E03007)
 
 ## What went wrong?
-None of the installed integrations were able to render the component you imported. Make sure to install the appropriate integration for the type of component you are trying to include in your page.
-
-For JSX / TSX files, [@astrojs/react](/en/guides/integrations-guide/react/), [@astrojs/preact](/en/guides/integrations-guide/preact/) or [@astrojs/solid-js](/en/guides/integrations-guide/solid-js/) can be used. For Vue and Svelte files, the [@astrojs/vue](/en/guides/integrations-guide/vue/) and [@astrojs/svelte](/en/guides/integrations-guide/svelte/) integrations can be used respectively
+None of the installed integrations were able to render the component you imported. Make sure to install the appropriate integration for the type of component you are trying to include in your page.For JSX / TSX files, [@astrojs/react](/en/guides/integrations-guide/react/), [@astrojs/preact](/en/guides/integrations-guide/preact/) or [@astrojs/solid-js](/en/guides/integrations-guide/solid-js/) can be used. For Vue and Svelte files, the [@astrojs/vue](/en/guides/integrations-guide/vue/) and [@astrojs/svelte](/en/guides/integrations-guide/svelte/) integrations can be used respectively
 
 **See Also:**
--  [Frameworks components](/en/core-concepts/framework-components/)
--  [UI Frameworks](/en/guides/integrations-guide/#official-integrations)
+-  [Frameworks components](/en/core-concepts/framework-components/)- [UI Frameworks](/en/guides/integrations-guide/#official-integrations)
 
 
