--- a/src/content/docs/en/reference/errors/only-response-can-be-returned.mdx
+++ b/src/content/docs/en/reference/errors/only-response-can-be-returned.mdx
@@ -16,18 +16,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > Route returned a `RETURNED_VALUE`. Only a Response can be returned from Astro files. (E03005)
 
 ## What went wrong?
-Only instances of [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) can be returned inside Astro files.
-```astro title="pages/login.astro"
----
-return new Response(null, {
- status: 404,
- statusText: 'Not found'
-});
-
-// Alternatively, for redirects, Astro.redirect also returns an instance of Response
-return Astro.redirect('/login');
----
-```
+Only instances of [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) can be returned inside Astro files.```astro title="pages/login.astro"---return new Response(null, { status: 404, statusText: 'Not found'});// Alternatively, for redirects, Astro.redirect also returns an instance of Responsereturn Astro.redirect('/login');---```
 
 **See Also:**
 -  [Response](/en/guides/server-side-rendering/#response)
