--- a/src/content/docs/en/reference/errors/static-client-address-not-available.mdx
+++ b/src/content/docs/en/reference/errors/static-client-address-not-available.mdx
@@ -16,12 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **StaticClientAddressNotAvailable**: `Astro.clientAddress` is only available when using `output: 'server'`. Update your Astro config if you need SSR features. (E03003)
 
 ## What went wrong?
-The `Astro.clientAddress` property is only available when [Server-side rendering](/en/guides/server-side-rendering/) is enabled.
-
-To get the user's IP address in static mode, different APIs such as [Ipify](https://www.ipify.org/) can be used in a [Client-side script](/en/guides/client-side-scripts/) or it may be possible to get the user's IP using a serverless function hosted on your hosting provider.
+The `Astro.clientAddress` property is only available when [Server-side rendering](/en/guides/server-side-rendering/) is enabled.To get the user's IP address in static mode, different APIs such as [Ipify](https://www.ipify.org/) can be used in a [Client-side script](/en/guides/client-side-scripts/) or it may be possible to get the user's IP using a serverless function hosted on your hosting provider.
 
 **See Also:**
--  [Enabling SSR in Your Project](/en/guides/server-side-rendering/#enabling-ssr-in-your-project)
--  [Astro.clientAddress](/en/reference/api-reference/#astroclientaddress)
+-  [Enabling SSR in Your Project](/en/guides/server-side-rendering/#enabling-ssr-in-your-project)- [Astro.clientAddress](/en/reference/api-reference/#astroclientaddress)
 
 
