--- a/src/content/docs/en/reference/errors/static-redirect-not-available.mdx
+++ b/src/content/docs/en/reference/errors/static-redirect-not-available.mdx
@@ -16,12 +16,9 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **StaticRedirectNotAvailable**: Redirects are only available when using `output: 'server'`. Update your Astro config if you need SSR features. (E03001)
 
 ## What went wrong?
-The `Astro.redirect` function is only available when [Server-side rendering](/en/guides/server-side-rendering/) is enabled.
-
-To redirect on a static website, the [meta refresh attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta) can be used. Certain hosts also provide config-based redirects (ex: [Netlify redirects](https://docs.netlify.com/routing/redirects/)).
+The `Astro.redirect` function is only available when [Server-side rendering](/en/guides/server-side-rendering/) is enabled.To redirect on a static website, the [meta refresh attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta) can be used. Certain hosts also provide config-based redirects (ex: [Netlify redirects](https://docs.netlify.com/routing/redirects/)).
 
 **See Also:**
--  [Enabling SSR in Your Project](/en/guides/server-side-rendering/#enabling-ssr-in-your-project)
--  [Astro.redirect](/en/guides/server-side-rendering/#astroredirect)
+-  [Enabling SSR in Your Project](/en/guides/server-side-rendering/#enabling-ssr-in-your-project)- [Astro.redirect](/en/guides/server-side-rendering/#astroredirect)
 
 
