--- a/src/content/docs/en/reference/errors/unknown-config-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-config-error.mdx
@@ -14,10 +14,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 
 
 ## What went wrong?
-Astro encountered an unknown error loading your Astro configuration file.
-This is often caused by a syntax error in your config and the message should offer more information.
-
-If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
+Astro encountered an unknown error loading your Astro configuration file.This is often caused by a syntax error in your config and the message should offer more information.If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
 
 **See Also:**
 -  [Configuration Reference](/en/reference/configuration-reference/)
