fix broken link

--- a/src/content/docs/zh-cn/guides/server-side-rendering.mdx
+++ b/src/content/docs/zh-cn/guides/server-side-rendering.mdx
@@ -10,7 +10,7 @@ import Since from '~/components/Since.astro';
 - 用 `fetch` 动态调用 API 来渲染数据。
 - 使用**适配器**部署你的网站。
 
-## 在你的项目中启用 SSR
+## 启用 SSR
 
 首先，在开发模式使用`output: server`配置选项来启用 SSR 功能：
 
