--- a/src/content/docs/zh-cn/reference/directives-reference.mdx
+++ b/src/content/docs/zh-cn/reference/directives-reference.mdx
@@ -114,7 +114,7 @@ import api from '../db/api.js';
 
 默认情况下，UI 框架组件不会在客户端激活。如果没有 `client:*` 指令，它的 HTML 将被渲染到页面上，而无需 JavaScript。
 
-客户端指令只能用于直接引入到 `.astro` 组件中的 UI 框架组件。 使用[动态标签](/zh-cn/core-concepts/astro-components/#动态标签)和[通过 `components` prop 传递的自定义组件](/zh-cn/guides/markdown-content/#custom-components-with-imported-mdx)时，不支持 Hydration 指令。
+客户端指令只能用于直接引入到 `.astro` 组件中的 UI 框架组件。 使用[动态标签](/zh-cn/core-concepts/astro-syntax/#dynamic-tags)和[通过 `components` prop 传递的自定义组件](/zh-cn/guides/markdown-content/#custom-components-with-imported-mdx)时，不支持 Hydration 指令。
 
 ### `client:load`
 
@@ -230,7 +230,7 @@ import api from '../db/api.js';
 </script>
 ```
 
-📚 查看[客户端脚本](/zh-cn/core-concepts/astro-components/#客户端脚本)如何在 Astro 组件中工作。
+📚 查看[客户端脚本](/zh-cn/guides/client-side-scripts/)如何在 Astro 组件中工作。
 
 ### `define:vars`
 
