--- a/src/content/docs/es/reference/integrations-reference.mdx
+++ b/src/content/docs/es/reference/integrations-reference.mdx
@@ -357,7 +357,7 @@ export default function myIntegration() {
 
 #### Opción `routes`
 
-**Tipo:** [`RouteData[]`](https://github.com/withastro/astro/blob/main/packages/astro/src/%40types/astro.ts#L1525)
+**Tipo:** [`RouteData[]`](#referencia-del-tipo-routedata)
 
 Una lista de todas las rutas generadas junto con sus metadatos asociados. **¡Estará vacío cuando uses un adaptador SSR!**
 
@@ -366,7 +366,7 @@ Puedes consultar la referencia completa del tipo `RouteData` a continuación, pe
 - `component` - la ruta del archivo de entrada relativa a la raíz del proyecto
 - `pathname` - la URL del archivo de salida (indefinido para rutas que usan parámetros `[dynamic]` y `[...spread]`)
 
-**Referencia del tipo `RouteData`**
+##### Referencia del tipo `RouteData`
 
 ```ts
 interface RouteData {
