--- a/src/content/docs/en/guides/integrations-guide/markdoc.mdx
+++ b/src/content/docs/en/guides/integrations-guide/markdoc.mdx
@@ -13,7 +13,7 @@ description: Learn how to use the @astrojs/markdoc integration in your Astro pro
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/markdoc/'
 hasREADME: true
 category: other
-i18nReady: true
+i18nReady: false
 ---
 
 import Video from '~/components/Video.astro';
@@ -123,21 +123,21 @@ import markdoc from '@astrojs/markdoc';
 
 // https://astro.build/config
 export default defineConfig({
-	integrations: [
-		markdoc({
-			tags: {
-				aside: {
-					render: 'Aside',
+  integrations: [
+    markdoc({
+      tags: {
+        aside: {
+          render: 'Aside',
           attributes: {
             // Component props as attribute definitions
             // See Markdoc's documentation on defining attributes
             // https://markdoc.dev/docs/attributes#defining-attributes
             type: { type: String },
           }
-				},
-			},
-		}),
-	],
+        },
+      },
+    }),
+  ],
 });
 ```
 
@@ -168,11 +168,11 @@ import markdoc from '@astrojs/markdoc';
 
 // https://astro.build/config
 export default defineConfig({
-	integrations: [
-		markdoc({
-			nodes: {
-				heading: {
-					render: 'Heading',
+  integrations: [
+    markdoc({
+      nodes: {
+        heading: {
+          render: 'Heading',
           // Markdoc requires type defs for each attribute.
           // These should mirror the `Props` type of the component
           // you are rendering. 
@@ -181,10 +181,10 @@ export default defineConfig({
           attributes: {
             level: { type: String },
           }
-				},
-			},
-		}),
-	],
+        },
+      },
+    }),
+  ],
 });
 ```
 
