--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -236,7 +236,9 @@ The function takes an [endpoint context](/en/reference/api-reference/#endpoint-c
 
 Astro enables HTTP streaming by default for all pages that are not [prerendered](#hybrid-rendering). This means that your page's content will be sent incrementally to the page as it resolves async functions and requests.
 
-You can `await` promises in the frontmatter of your page, or you can move those requests down into Astro components the page renders. The page will then send down the HTML it's capable of sending down without waiting for those async components, and then it will start rendering the components in the order they are found in your page's HTML one by one.
+To control the order in which your page renders content, you can adjust where you `await` promises. 
+
+When you `await` promises in the frontmatter of your page, your initial page rendering waits for this async data. Moving those requests into separate Astro components means that your page around these components can now render without waiting. Then, it will start rendering the async components in the order they are found in your page's HTML, one by one.
 
 For example, given a page that fetches some data:
 
