--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -240,7 +240,7 @@ To control the order in which your page renders content, you can adjust where yo
 
 When you `await` promises in the frontmatter of your page, your initial page rendering waits for this async data. Moving those requests into separate Astro components means that your page around these components can now render without waiting. Then, it will start rendering the async components in the order they are found in your page's HTML, one by one.
 
-For example, given a page that fetches some data:
+For example, the following page fetches some data in its frontmatter, which delays page rendering:
 
 ```astro title="src/pages/index.astro"
 ---
