--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -396,24 +396,22 @@ If you are building a dynamic website (using Astro's SSR support), you are not e
 
 ```astro
 ---
-import { getEntryBySlug } from 'astro:content';
+// src/pages/posts/[...slug].astro
+import { getEntryBySlug } from "astro:content";
 // 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
-// 2. check if the slug identifier matches the filename
 if (slug === undefined) {
-    throw new Error("slug/filename mismatch");
+	throw new Error("Slug is required");
 }
-// 3. Query for the entry directly using the request slug
-const entry = await getEntryBySlug('blog', slug);
-// 4. redirect if the entry does not exist
+// 2. Query for the entry directly using the request slug
+const entry = await getEntryBySlug("blog", slug);
+// 3. Redirect if the entry does not exist
 if (entry === undefined) {
-    return Astro.redirect("/404");
+	return Astro.redirect("/404");
 }
-// 5. (Optional) render the entry to HTML in the template
+// 4. (Optional) render the entry to HTML in the template
 const { Content } = await entry.render();
 ---
-<h1>{entry.data.title}</h1>
-<Content />
 ```
 
 ## Migrating from File-Based Routing 
