--- a/src/content/docs/es/editor-setup.mdx
+++ b/src/content/docs/es/editor-setup.mdx
@@ -55,7 +55,7 @@ Consulta [la guía del usuario del proyecto](https://ota-meshi.github.io/eslint-
 
 ### Prettier
 
-[Prettier](https://prettier.io/) es un formateador popular para JavaScript, HTML, CSS y más. Si estás usando la [extensión de VS Code de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) o [el servidor de lenguaje de Astro dentro de otro editor](#otros-editores-de-codigo), el formateo de código con Prettier está incluido.
+[Prettier](https://prettier.io/) es un formateador popular para JavaScript, HTML, CSS y más. Si estás usando la [extensión de VS Code de Astro](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode) o [el servidor de lenguaje de Astro dentro de otro editor](#otros-editores-de-código), el formateo de código con Prettier está incluido.
 
 Para dar soporte al formateo de archivos `.astro` fuera del editor (por ejemplo, CLI) o dentro de editores que no soportan nuestras herramientas de editor, instala [el plugin oficial de Prettier de Astro](https://github.com/withastro/prettier-plugin-astro).
 
