--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -409,7 +409,7 @@ const entry = await getEntryBySlug("blog", slug);
 if (entry === undefined) {
 	return Astro.redirect("/404");
 }
-// 4. (Optional) render the entry to HTML in the template
+// 4. (Optional) Render the entry to HTML in the template
 const { Content } = await entry.render();
 ---
 ```
