--- a/src/content/docs/es/tutorial/0-introduction/1.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/1.mdx
@@ -20,7 +20,7 @@ También necesitarás una cuenta [GitHub](https://github.com) (o similar) para p
 
 Márcalos.
 
-Al final de cada página, encontrará una lista de tareas que debería poder realizar. Marque estos elementos para ver su progreso en el Tutorial Tracker.
+Al final de cada página, encontrarás una lista de tareas que deberías poder realizar. Marca estos elementos para ver su progreso en el Tutorial Tracker.
 
 El uso del rastreador es opcional, pero puede ayudarle a recordar su lugar si completa el tutorial en varias visitas. También puedes dejar en blanco algunas listas de control como recordatorio de unidades que quieras volver a visitar más adelante.
 
