--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -17,7 +17,7 @@ import Lede from '~/components/tutorial/Lede.astro';
 
 A lo largo del camino: 
 - Configure su entorno de desarrollo 
-- Cree páginas y entradas de blog para su sitio web
+- Crearás páginas y entradas de blog para tu sitio web
 - Construido con componentes Astro
 - Consulta y trabajo con archivos locales
 - Añada interactividad a su sitio web 
