--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -16,7 +16,7 @@ import Lede from '~/components/tutorial/Lede.astro';
 <Lede> En este tutorial, aprenderás las principales funciones de Astro creando un blog totalmente funcional, desde cero hasta el lanzamiento completo. 🚀 </Lede>
 
 A lo largo del camino: 
-- Configure su entorno de desarrollo 
+- Configurarás tu entorno de desarrollo 
 - Crearás páginas y entradas de blog para tu sitio web
 - Construido con componentes Astro
 - Consulta y trabajo con archivos locales
