--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -18,7 +18,7 @@ import Lede from '~/components/tutorial/Lede.astro';
 A lo largo del camino: 
 - Configurarás tu entorno de desarrollo 
 - Crearás páginas y entradas de blog para tu sitio web
-- Construido con componentes Astro
+- Construirás con componentes Astro
 - Consulta y trabajo con archivos locales
 - Añada interactividad a su sitio web 
 - Despliegue de su sitio en la web
