--- a/src/content/docs/es/tutorial/0-introduction/index.mdx
+++ b/src/content/docs/es/tutorial/0-introduction/index.mdx
@@ -19,7 +19,7 @@ A lo largo del camino:
 - Configurarás tu entorno de desarrollo 
 - Crearás páginas y entradas de blog para tu sitio web
 - Construirás con componentes Astro
-- Consulta y trabajo con archivos locales
+- Consultarás y trabajarás con archivos locales
 - Añada interactividad a su sitio web 
 - Despliegue de su sitio en la web
 
