--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -38,7 +38,7 @@ Esta unidad le muestra cómo configurar su entorno de desarrollo y desplegar en 
 
 En el panel de archivos, debería ver `src/pages/index.astro`. Haz clic para abrirlo, y sigue [Escribe tu primera línea de Astro](/es/tutorial/1-setup/3/) para hacer un cambio en este archivo.
 
-**Crear un repositorio GitHub**
+**Crea un repositorio GitHub**
 
 1. Preciosa en el boton <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa una nombre para dicho repositorio y haz click en <kbd>Crear Repo & push</kbd>. 
 
