--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -40,7 +40,7 @@ En el panel de archivos, debería ver `src/pages/index.astro`. Haz clic para abr
 
 **Crea un repositorio GitHub**
 
-1. Preciosa en el boton <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa una nombre para dicho repositorio y haz click en <kbd>Crear Repo & push</kbd>. 
+1. Presiona en el botón <kbd>Conectar Repositorio</kbd> en la parte superior de la lista de archivos, ingresa una nombre para dicho repositorio y haz clic en <kbd>Crear Repo & push</kbd>. 
 
 2. Cuando tengas cambios para confirmar en GitHub, aparecerá un botón "Confirmar" en la parte superior izquierda de tu espacio de trabajo. Al hacer clic en él, podrás introducir un mensaje de confirmación y actualizar tu repositorio.
 
