--- a/src/content/docs/es/tutorial/1-setup/index.mdx
+++ b/src/content/docs/es/tutorial/1-setup/index.mdx
@@ -44,7 +44,7 @@ En el panel de archivos, debería ver `src/pages/index.astro`. Haz clic para abr
 
 2. Cuando tengas cambios para confirmar en GitHub, aparecerá un botón "Confirmar" en la parte superior izquierda de tu espacio de trabajo. Al hacer clic en él, podrás introducir un mensaje de confirmación y actualizar tu repositorio.
 
-**Despliegue su sitio**
+**Despliega tu sitio**
 
 Si quieres desplegar tu sitio en Netlify, pasa a [Despliega tu sitio en la web](/es/tutorial/1-setup/5/).
 ¡Si no, pasa a [Unidad 2](/es/tutorial/2-pages/) para empezar a construir con Astro!
