fix: review recommendations

--- a/src/content/docs/de/core-concepts/sharing-state.mdx
+++ b/src/content/docs/de/core-concepts/sharing-state.mdx
@@ -1,6 +1,6 @@
 ---
-title: Status zwischen Astro-Inseln teilen
-description: Lerne, wie du den Status von Komponenten - und Frameworks! - mit Nano Stores teilst.
+title: Zustand zwischen Astro-Inseln teilen
+description: Lerne, wie du den Zustand von Komponenten - und Frameworks! - mit Nano Stores teilst.
 i18nReady: true
 type: recipe
 ---
@@ -9,7 +9,7 @@ import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
 import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
 
-Wenn du eine Astro-Website mit [Insel-Architektur / Partielle Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Status zwischen meinen Komponenten teilen.**
+Wenn du eine Astro-Website mit [Insel-Architektur / Partielle Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Zustand zwischen meinen Komponenten teilen.**
 
 UI-Frameworks wie React oder Vue nutzen ["Kontext"-Anbieter](https://reactjs.org/docs/context.html) die von anderen Komponenten konsumiert werden können. Bei der [partiellen Hydratation von Komponenten](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) in Astro oder Markdown kannst du diese Kontext-Wrapper jedoch nicht verwenden.
 
@@ -52,7 +52,7 @@ Wenn du Bibliotheken von Drittanbietern vermeiden willst, sind [Svelte Stores](h
 <details>
 <summary>**🙋 Wie unterscheiden sich Feststoffsignale von Nano Stores?**</summary>
 
-Wenn du schon eine Weile mit Solid arbeitest, hast du vielleicht schon versucht, [signals](https://www.solidjs.com/docs/latest#createsignal) oder [stores](https://www.solidjs.com/docs/latest#createstore) außerhalb deiner Komponenten zu verschieben. Dies ist eine großartige Möglichkeit, den Status zwischen Solid-Inseln zu teilen! Versuche, Signale aus einer gemeinsamen Datei zu exportieren:
+Wenn du schon eine Weile mit Solid arbeitest, hast du vielleicht schon versucht, [signals](https://www.solidjs.com/docs/latest#createsignal) oder [stores](https://www.solidjs.com/docs/latest#createstore) außerhalb deiner Komponenten zu verschieben. Dies ist eine großartige Möglichkeit, den Zustand zwischen Solid-Inseln zu teilen! Versuche, Signale aus einer gemeinsamen Datei zu exportieren:
 
 ```js
 // sharedStore.js
@@ -60,7 +60,7 @@ import { createSignal } from 'solid-js';
 
 export const sharedCount = createSignal(0);
 ```
-...und alle Komponenten, die `sharedCount` importieren, teilen sich denselben Status. Obwohl dies gut funktioniert, könntest du Nano Stores bevorzugen, wenn du a) die Add-ons für ["objects"](https://github.com/nanostores/nanostores#maps) und [async state](https://github.com/nanostores/nanostores#lazy-stores) magst, oder b) zwischen Solid und anderen UI-Frameworks wie Preact oder Vue kommunizieren möchtest.
+...und alle Komponenten, die `sharedCount` importieren, teilen sich denselben Zustand. Obwohl dies gut funktioniert, könntest du Nano Stores bevorzugen, wenn du a) die Add-ons für ["objects"](https://github.com/nanostores/nanostores#maps) und [async state](https://github.com/nanostores/nanostores#lazy-stores) magst, oder b) zwischen Solid und anderen UI-Frameworks wie Preact oder Vue kommunizieren möchtest.
 </details>
 :::
 
