fix: review reommendations

--- a/src/content/docs/de/core-concepts/sharing-state.mdx
+++ b/src/content/docs/de/core-concepts/sharing-state.mdx
@@ -9,21 +9,21 @@ import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
 import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
 
-Wenn du eine Astro-Website mit [Insel-Architektur / Partielle Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Zustand zwischen meinen Komponenten teilen.**
+Wenn du eine Astro-Website mit [Insel-Architektur / Partieller Hydratation](/de/concepts/islands/) aufbaust, bist du vielleicht schon auf dieses Problem gestoßen: **Ich möchte den Zustand zwischen meinen Komponenten teilen.**
 
-UI-Frameworks wie React oder Vue nutzen ["Kontext"-Anbieter](https://reactjs.org/docs/context.html) die von anderen Komponenten konsumiert werden können. Bei der [partiellen Hydratation von Komponenten](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) in Astro oder Markdown kannst du diese Kontext-Wrapper jedoch nicht verwenden.
+UI-Frameworks wie React oder Vue nutzen ["Kontext"-Anbieter](https://reactjs.org/docs/context.html), die von anderen Komponenten konsumiert werden können. Bei der [partiellen Hydratation von Komponenten](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) in Astro oder Markdown kannst du diese Kontext-Wrapper jedoch nicht verwenden.
 
 Astro empfiehlt eine andere Lösung für die gemeinsame Speicherung auf der Client-Seite: [**Nano Stores**](https://github.com/nanostores/nanostores).
 
 ## Warum Nano Stores?
 
-Die [Nano Stores](https://github.com/nanostores/nanostores) Bibliothek ermöglicht es dir, Stores zu erstellen, mit denen jede Komponente interagieren kann. Wir empfehlen Nano Stores, weil:
+Die [Nano Stores](https://github.com/nanostores/nanostores) Bibliothek ermöglicht es dir, Stores zu erstellen, mit denen jede Komponente interagieren kann. Wir empfehlen Nano Stores aus folgenden Gründen:
 - **Sie sind leichtgewichtig.** Nano Stores liefern das Minimum an JS, das du brauchst (weniger als 1 KB), ohne jegliche Abhängigkeiten.
-- **Sie sind Framework-agnostisch** Das bedeutet, dass die gemeinsame Nutzung von Zuständen zwischen Frameworks nahtlos ist! Astro ist auf Flexibilität ausgelegt, daher lieben wir Lösungen, die unabhängig von deiner Präferenz eine ähnliche Entwicklererfahrung bieten.
+- **Sie sind Framework-agnostisch.** Das bedeutet, dass die gemeinsame Nutzung von Zuständen zwischen Frameworks nahtlos ist! Astro ist auf Flexibilität ausgelegt, daher lieben wir Lösungen, die unabhängig von deiner Präferenz eine ähnliche Entwicklererfahrung bieten.
 
 Dennoch gibt es eine Reihe von Alternativen, die du ausprobieren kannst. Dazu gehören:
 - [Svelte's eingebaute Stores](https://svelte.dev/tutorial/writable-stores)
-- [Solide signals](https://www.solidjs.com/docs/latest) außerhalb eines Komponentenkontextes
+- [Solid signals](https://www.solidjs.com/docs/latest) außerhalb eines Komponentenkontextes
 - [Vue's Reaktivitäts-API](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
 - [Senden von benutzerdefinierten Browser-Ereignissen](https://developer.mozilla.org/en-US/docs/Web/Events/Creating_and_triggering_events) zwischen Komponenten
 
@@ -33,7 +33,7 @@ Dennoch gibt es eine Reihe von Alternativen, die du ausprobieren kannst. Dazu ge
 <summary>**🙋 Kann ich Nano Stores in `.astro`-Dateien oder anderen serverseitigen Komponenten verwenden?**</summary>
 
 Nano Stores _können_ in serverseitigen Komponenten importiert, beschrieben und gelesen werden, **aber wir empfehlen es nicht!** Das liegt an einigen Einschränkungen:
-- Das Schreiben in einen Store aus einer `.astro`-Datei oder einer [nicht-hydratatierten Komponente](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) hat _keine_ Auswirkung auf den Wert, der von [Client-seitigen Komponenten](/de/reference/directives-reference/#client-directives) empfangen wird.
+- Das Schreiben in einen Store aus einer `.astro`-Datei oder einer [nicht-hydratisierten Komponente](/de/core-concepts/framework-components/#interaktive-komponenten-hydratisieren) hat _keine_ Auswirkung auf den Wert, der von [Client-seitigen Komponenten](/de/reference/directives-reference/#client-directives) empfangen wird.
 - Du kannst einen Nano Store nicht als "prop" an clientseitige Komponenten übergeben.
 - Du kannst keine Änderungen aus einer `Astro`-Datei abonnieren, da Astro-Komponenten nicht neu gerendert werden.
 
@@ -50,9 +50,9 @@ Wenn du Bibliotheken von Drittanbietern vermeiden willst, sind [Svelte Stores](h
 </details>
 
 <details>
-<summary>**🙋 Wie unterscheiden sich Feststoffsignale von Nano Stores?**</summary>
+<summary>**🙋 Wie unterscheiden sich Solid Signals von Nano Stores?**</summary>
 
-Wenn du schon eine Weile mit Solid arbeitest, hast du vielleicht schon versucht, [signals](https://www.solidjs.com/docs/latest#createsignal) oder [stores](https://www.solidjs.com/docs/latest#createstore) außerhalb deiner Komponenten zu verschieben. Dies ist eine großartige Möglichkeit, den Zustand zwischen Solid-Inseln zu teilen! Versuche, Signale aus einer gemeinsamen Datei zu exportieren:
+Wenn du schon eine Weile mit Solid arbeitest, hast du vielleicht schon versucht, [signals](https://www.solidjs.com/docs/latest#createsignal) oder [stores](https://www.solidjs.com/docs/latest#createstore) außerhalb deiner Komponenten zu verschieben. Dies ist eine großartige Möglichkeit, den Zustand zwischen Solid-Inseln zu teilen! Versuche, Signals aus einer gemeinsamen Datei zu exportieren:
 
 ```js
 // sharedStore.js
@@ -99,9 +99,9 @@ Um loszulegen, installiere Nano Stores zusammen mit dem Hilfspaket für dein bev
   </Fragment>
 </UIFrameworkTabs>
 
-Du kannst die [Nano Stores Anleitung](https://github.com/nanostores/nanostores#guide) von hier aus aufrufen oder unserem Beispiel unten folgen!
+Du kannst die [Nano-Stores-Anleitung](https://github.com/nanostores/nanostores#guide) von hier aus aufrufen oder unserem Beispiel unten folgen!
 
-## Anwendungsbeispiel - E-Commerce Warenkorb Flyout
+## Anwendungsbeispiel - E-Commerce Warenkorb-Flyout
 
 Nehmen wir an, wir bauen eine einfache E-Commerce-Oberfläche mit drei interaktiven Elementen:
 - Ein "In den Warenkorb"-Formular
@@ -142,7 +142,7 @@ import AddToCartForm from '../components/AddToCartForm';
 </html>
 ```
 
-### "Atome" verwenden
+### "Atoms" verwenden
 
 Beginnen wir damit, dass wir unser `CartFlyout` öffnen, wenn `CartFlyoutToggle` angeklickt wird.
 
@@ -165,9 +165,9 @@ import { useStore } from '@nanostores/preact';
 import { isCartOpen } from '../cartStore';
 
 export default function CartButton() {
-  // read the store value with the `useStore` hook
+  // lies den Speicherwert mit dem `useStore`-Hook
   const $isCartOpen = useStore(isCartOpen);
-  // write to the imported store using `.set`
+  // schreibe in den importierten Speicher mit `.set`
   return (
     <button onClick={() => isCartOpen.set(!$isCartOpen)}>Cart</button>
   )
@@ -357,7 +357,7 @@ Jetzt fügen wir einen `cartItem`-Store zu unserer `cartStore.js` von vorhin hin
   </Fragment>
 </JavascriptFlavorTabs>
 
-Jetzt exportieren wir einen `addCartItem`-Helper, den unsere Komponenten verwenden können.
+Jetzt exportieren wir einen `addCartItem`-Helper (Hilfsfunktion), den unsere Komponenten verwenden können.
 - **Wenn dieser Artikel nicht in deinem Warenkorb ist**, füge den Artikel mit einer Startmenge von 1 hinzu.
 - **Wenn es diesen Artikel _doch_ schon gibt**, erhöhe die Menge um 1.
 
@@ -691,4 +691,4 @@ export default function CartFlyout() {
 
 Jetzt solltest du ein vollständig interaktives E-Commerce-Beispiel mit dem kleinsten JS-Bündel der Galaxis haben 🚀
 
-[**Probiere das fertige Beispiel**](https://github.com/withastro/astro/tree/main/examples/with-nanostores) auf deinem Rechner oder online über Stackblitz!
+[**Probiere das fertige Beispiel**](https://github.com/withastro/astro/tree/main/examples/with-nanostores) auf deinem Rechner oder online über Stackblitz aus!
