--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -9,7 +9,9 @@ i18nReady: false
 
 ## Installing Bun
 
-Installing Bun is as easy as running the following command in your terminal:
+installing Bun is a breeze - just run one simple command in your terminal and you're ready to go! Plus, with support for `npx packages, creating a new Astro project with Bun is as easy as pie.
+
+Here's how you can install Bun:
 
 ```bash
 curl -fsSL https://bun.sh/install | bash
@@ -52,15 +54,17 @@ Keep in mind that using `bun dev` will not work, as that will start Bun's intern
 
 ## Using Astro integrations
 
-Bun has support for `npx` packages, which means you can use any of the Astro integrations with Bun in one familiar command:
+But the best part? Bun makes it simple to integrate with all of your favorite Astro tools. With support for npx packages, you can use any of the Astro integrations with Bun in one familiar command:
 
 ```bash
 bunx astro add react
 ```
 
+This will work exactly the same as if you were using NPM, but with the added benefit of using Bun's blazing fast runtime.
+
 ## Building your site with Bun
 
-Building your site with Bun is done with the following command:
+And when it's time to build and serve your site, Bun has got you covered with just a few easy commands.
 
 ```bash
 bun run build
